--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
       <spring.boot.version>3.2.4</spring.boot.version>
       <spring-framework.version>6.1.6</spring-framework.version>
       <lombok.version>1.18.24</lombok.version>
+      <tomcat.embed.version>10.1.25</tomcat.embed.version>
       <openapi-starter-webmvc-ui.version>2.0.2</openapi-starter-webmvc-ui.version>
       <swagger-annotations.version>1.5.20</swagger-annotations.version>
       <swagger-core-version>2.0.0</swagger-core-version>
@@ -105,6 +106,10 @@
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-logging</artifactId>
             </exclusion>
+            <exclusion>
+               <groupId>org.apache.tomcat.embed</groupId>
+               <artifactId>tomcat-embed-core</artifactId>
+            </exclusion>
          </exclusions>
       </dependency>
       <dependency>
@@ -130,6 +135,13 @@
             </exclusion>
          </exclusions>
       </dependency>
+
+      <dependency>
+         <groupId>org.apache.tomcat.embed</groupId>
+         <artifactId>tomcat-embed-core</artifactId>
+         <version>${tomcat.embed.version}</version>
+      </dependency>
+
       <dependency>
          <groupId>org.springframework.security</groupId>
          <artifactId>spring-security-test</artifactId>
